--- a/app/package.json
+++ b/app/package.json
@@ -36,6 +36,12 @@
     ]
   },
   "devDependencies": {
+    "netlify-cli": "^14.1.0",
     "tailwindcss": "^3.3.1"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "tailwind.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
